[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/entity/guardian/cultist_priest_idle_2.png" type="Texture" id=1]
[ext_resource path="res://assets/entity/guardian/cultist_priest_die_6.png" type="Texture" id=2]
[ext_resource path="res://assets/entity/guardian/cultist_priest_die_2.png" type="Texture" id=3]
[ext_resource path="res://assets/entity/guardian/cultist_priest_die_1.png" type="Texture" id=4]
[ext_resource path="res://assets/entity/guardian/cultist_priest_attack_5.png" type="Texture" id=5]
[ext_resource path="res://assets/entity/guardian/cultist_priest_attack_4.png" type="Texture" id=6]
[ext_resource path="res://assets/entity/guardian/cultist_priest_idle_5.png" type="Texture" id=7]
[ext_resource path="res://assets/entity/guardian/cultist_priest_walk_1.png" type="Texture" id=8]
[ext_resource path="res://assets/sound/game/guardian_attack.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/entity/guardian/cultist_priest_attack_2.png" type="Texture" id=12]
[ext_resource path="res://assets/entity/guardian/cultist_priest_die_5.png" type="Texture" id=13]
[ext_resource path="res://assets/entity/guardian/cultist_priest_attack_1.png" type="Texture" id=14]
[ext_resource path="res://assets/entity/guardian/cultist_priest_die_3.png" type="Texture" id=16]
[ext_resource path="res://assets/entity/guardian/cultist_priest_walk_4.png" type="Texture" id=17]
[ext_resource path="res://assets/entity/guardian/cultist_priest_attack_3.png" type="Texture" id=18]
[ext_resource path="res://assets/entity/guardian/cultist_priest_idle_1.png" type="Texture" id=19]
[ext_resource path="res://assets/entity/guardian/cultist_priest_walk_2.png" type="Texture" id=20]
[ext_resource path="res://assets/entity/guardian/cultist_priest_idle_3.png" type="Texture" id=21]
[ext_resource path="res://assets/entity/guardian/cultist_priest_walk_6.png" type="Texture" id=22]
[ext_resource path="res://assets/entity/guardian/cultist_priest_die_4.png" type="Texture" id=23]
[ext_resource path="res://assets/entity/guardian/cultist_priest_walk_3.png" type="Texture" id=24]
[ext_resource path="res://assets/entity/guardian/cultist_priest_walk_5.png" type="Texture" id=25]
[ext_resource path="res://assets/entity/guardian/cultist_priest_idle_4.png" type="Texture" id=26]
[ext_resource path="res://entity/guardian.gd" type="Script" id=27]
[ext_resource path="res://entity/fx/boss_hp_bar.tscn" type="PackedScene" id=28]
[ext_resource path="res://assets/sound/game/guardian_death.mp3" type="AudioStream" id=29]

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 82.7
orbit_velocity = 0.4
orbit_velocity_random = 0.0
scale = 3.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 1 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 13 ), ExtResource( 2 ) ],
"loop": false,
"name": "death",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 22 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 31.0
height = 56.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.8, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="guardian" type="KinematicBody2D"]
script = ExtResource( 27 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -11 )
amount = 50
process_material = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1.5, 1 )
scale = Vector2( 0.73, 0.76 )
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="boss_hp_bar" parent="." instance=ExtResource( 28 )]
visible = false

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 52 )

[node name="Position2DShot" type="Position2D" parent="."]
position = Vector2( 0, 60 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/death = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = 13.0

[node name="AudioStreamPlayerAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
pitch_scale = 0.6

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
